--- a/src/pages/liquor-shop/index.astro
+++ b/src/pages/liquor-shop/index.astro
@@ -226,7 +226,7 @@ stores.forEach(store => {
     display: grid;
     align-items: center;
     gap: var(--space-x1);
-    grid-template-columns: 2em 1fr max-content;
+    grid-template-columns: 2em 1fr;
     margin-block: var(--space-x2);
     font-size: 16px;
     line-height: 1.3;
@@ -235,7 +235,6 @@ stores.forEach(store => {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    min-width: 100%;
     height: 1.7em;
     padding-bottom: 2px;
     border-radius: 5px;
