feat(liquor-shop):分布図追加

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -139,5 +139,8 @@ const url = new URL(Astro.url.pathname, 'https://nga-osaka.com');
 	.app-lightbox>.portal {
 		padding: var(--space-x5);
 	}
+	a{
+		word-break: break-all;
+	}
 
 </style>
