--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -42,7 +42,7 @@ const {
 console.log(Astro.props);
 ---
 
-<article class="store-item" data-area={area} data-open={open} data-end={end} data-display="true" data-taste={taste} data-flavor={flavor} data-title={title}>
+<article class="store-item" data-area={area} data-open={open} data-end={end} data-display="true" data-taste={taste} data-flavor={flavor} data-title={title} data-number={number}>
 	<a href={`/store/${href}`} class="store-link" data-canceled={canceled}>
 		<figure class="store-figure">
 			<img src={image} width="1920" height="1080" alt="" class="store-image" loading="lazy">
