--- a/src/pages/store/[slug].astro
+++ b/src/pages/store/[slug].astro
@@ -519,6 +519,12 @@ const liquorShopURL = `/liquor-shop/${storeInCharge[store.acf.store_in_charge.va
         }
     }
 
+    .store-image {
+      margin-inline: calc(50% - 50vw);
+      padding-inline: calc(50vw - 50%);
+      overflow-x: hidden;
+    }
+
     .store-spec {
         margin: var(--space-x8) auto 0;
         //max-width: 800px;
