style(liquor-shop):チャートタイトル変更

--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -725,20 +725,20 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
     font-weight: bold;
     line-height: 1;
     &.label-top {
-      margin-top: 0;
+      bottom: unset;
       color: #6B9767;
     }
     &.label-right {
-      margin-right: 0;
+      left: unset;
       writing-mode: vertical-rl;
       color: #BD5D5D;
     }
     &.label-bottom {
-      margin-bottom: 0;
+      top: unset;
       color: #4191B1;
     }
     &.label-left {
-      margin-left: 0;
+      right: unset;
       writing-mode: vertical-rl;
       color: #BF9E6C;
     }
