--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -129,6 +129,9 @@ const { href, title, body } = Astro.props;
   .main-nav__text {
     margin-top: var(--space-x1);
   }
+  .menu {
+    display: none;
+  }
   /**************************\
 Basic Modal Styles
 \**************************/
