--- a/src/pages/liquor-shop/[slug].astro
+++ b/src/pages/liquor-shop/[slug].astro
@@ -406,6 +406,7 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
         y: {
           suggestedMin: -10,
           suggestedMax: 10,
+          position: 'center',
           ticks: {
             display: false
           },
@@ -422,6 +423,7 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
         x: {
           suggestedMin: -10,
           suggestedMax: 10,
+          position: 'center',
           ticks: {
             display: false
           },
@@ -731,7 +733,7 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
     }
   }
   .sake-chart {
-    padding: var(--space-x3) var(--space-x4);
+    //padding: var(--space-x3) var(--space-x4);
   }
   .sake-chart-wrapper {
     position: relative;
@@ -752,20 +754,32 @@ const storeImage3MimeType = store.acf.store_image3 ? store.acf.store_image3.mime
     &.label-top {
       bottom: unset;
       color: #6B9767;
+      @media (min-width: 576px) {
+        top: var(--space-x1);
+      }
     }
     &.label-right {
       left: unset;
       writing-mode: vertical-rl;
       color: #BD5D5D;
+      @media (min-width: 576px) {
+        right: var(--space-x1);
+      }
     }
     &.label-bottom {
       top: unset;
       color: #4191B1;
+      @media (min-width: 576px) {
+        bottom: var(--space-x1);
+      }
     }
     &.label-left {
       right: unset;
       writing-mode: vertical-rl;
       color: #BF9E6C;
+      @media (min-width: 576px) {
+        left: var(--space-x1);
+      }
     }
   }
   .store-list {
